--- a/src/Mlflow.ipynb
+++ b/src/Mlflow.ipynb
@@ -82,7 +82,9 @@
     "mlflow.sklearn.log_model(rf, \"random_forest_model\")\n",
     "\n",
     "# Fin de l'exécution\n",
-    "mlflow.end_run()\n"
+    "mlflow.end_run()\n",
+    "\n",
+    "print(\"finish\")"
    ]
   }
  ],
