fix personal conda python version

--- a/src/models/decisionTree.ipynb
+++ b/src/models/decisionTree.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
@@ -127,23 +125,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: command not found: brew\n"
-     ]
-    }
-   ],
-   "source": [
-    "!brew install graphviz\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -183,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x15070ecf0>"
+       "<graphviz.graphs.Digraph at 0x11fdb3390>"
       ]
      },
      "execution_count": 7,
