--- a/src/models/MLFlow_Tree.ipynb
+++ b/src/models/MLFlow_Tree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,16 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/03/22 20:48:42 INFO mlflow.tracking.fluent: Experiment with name 'tree' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -111,7 +104,7 @@
        "<Experiment: artifact_location='file:///Users/hoangthuyduongvu/Desktop/sda_mlops/src/models/mlruns_tree/961169546191155350', creation_time=1742672922967, experiment_id='961169546191155350', last_update_time=1742672922967, lifecycle_stage='active', name='tree', tags={}>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1732,10 +1732,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x139beb110>"
+       "<graphviz.graphs.Digraph at 0x13f069160>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,6 +1751,37 @@
     "# Affichage du graphe obtenu:\n",
     "print(\"Cet arbre possède \",arbre.number_leaves(),\" feuilles.\")\n",
     "graphe_arbre\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hoangthuyduongvu/miniconda3/envs/banking-mlops/lib/python3.13/site-packages/mlflow/pyfunc/utils/data_validation.py:168: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Wrapper for MLflow\n",
+    "class MyMLflowModel(mlflow.pyfunc.PythonModel):\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "\n",
+    "    def predict(self, context, model_input):\n",
+    "        return self.model.predict(model_input)\n",
+    "    \n",
+    "# Creat perceptron on best params\n",
+    "best_rf = classif.ClassifierPerceptron(dim, learning_rate=0.01, init=True)\n",
+    "\n",
+    "mlflow_model = MyMLflowModel(model=best_rf)\n",
+    "\n",
+    "mlflow.pyfunc.save_model(path=\"tree\", python_model=mlflow_model)\n"
    ]
   },
   {
@@ -1902,13 +1933,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_test_pred = np.array([\n",
     "    arbre.predict(data_test[i]) for i in range(len(data_test))\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7,)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_test[0].shape"
    ]
   },
   {
